--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
        
     </section>
     <nav>
-        <a href="/paginas/paggatos.html" class="disponivel">Gatos</a>
+        <a href="paggatos.html" class="disponivel">Gatos</a>
         <a href="#" class="indisponivel">Cachorros</a>
        
     </nav>
@@ -42,7 +42,7 @@
    
 
     <nav>
-        <a href="paginas/pagcavalos.html" class="indisponivel">Cavalos</a>
+        <a href="pagcavalos.html" class="indisponivel">Cavalos</a>
         <a href="#" class="indisponivel">Aves</a>
     </nav>
 
