--- a/pagcavalos.html
+++ b/pagcavalos.html
@@ -18,7 +18,7 @@
             <h1>Fotos de Gatinhos :3</h1>    
             </section> 
             <picture>
-                <img src="../imagens/cats/cat2.jpg" alt="Principal" onclick="trocarCavalo()" id="horse">
+                <img src="#" alt="Principal" onclick="trocarCavalo()" id="horse">
             </picture> 
         <nav>
             <a href="../index.html">Inicio</a>
