--- a/pagdogs.html
+++ b/pagdogs.html
@@ -18,7 +18,7 @@
             <h1>Fotos de Doguinhos :3</h1>    
             </section> 
             <picture>
-                <img src="../imagens/cat2.jpg" alt="Principal" onclick="trocarDog()" id="dogs">
+                <img src="#" alt="Principal" onclick="trocarDog()" id="dogs">
             </picture> 
         <nav>
             <a href="../index.html">Inicio</a>
