--- a/paggatos.html
+++ b/paggatos.html
@@ -18,7 +18,7 @@
             <h1>Fotos de Gatinhos :3</h1>    
             </section> 
             <picture>
-                <img src="../imagens/cats/cat2.jpg" alt="Principal" onclick="trocarCat()" id="cats">
+                <img src="cat2.jpg" alt="Principal" onclick="trocarCat()" id="cats">
             </picture> 
         <nav>
             <a href="../index.html">Inicio</a>
