--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
    
 
     <nav>
-        <a href="pagcavalos.html" class="indisponivel">Cavalos</a>
+        <a href="#" class="indisponivel">Cavalos</a>
         <a href="#" class="indisponivel">Aves</a>
     </nav>
 
