--- a/pagcavalos.html
+++ b/pagcavalos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/Google-Noto-Emoji-Animals-Nature-22264-paw-prints.ico" type="image/x-icon">
     <link rel="stylesheet" href="catpag.css">
-    <script src="../jsimgs"></script>
+    <script src="jsimgs"></script>
     <title>Pet Photograph</title>
 </head>
 <body>
@@ -21,7 +21,7 @@
                 <img src="#" alt="Principal" onclick="trocarCavalo()" id="horse">
             </picture> 
         <nav>
-            <a href="../index.html">Inicio</a>
+            <a href="index.html">Inicio</a>
         </nav>
         
         
