--- a/paggatos.html
+++ b/paggatos.html
@@ -21,7 +21,7 @@
                 <img src="cat2.jpg" alt="Principal" onclick="trocarCat()" id="cats">
             </picture> 
         <nav>
-            <a href="../index.html">Inicio</a>
+            <a href="index.html">Inicio</a>
         </nav>
         
         
