--- a/pagcavalos.html
+++ b/pagcavalos.html
@@ -21,7 +21,7 @@
                 <img src="#" alt="Principal" onclick="trocarCavalo()" id="horse">
             </picture> 
         <nav>
-            <a href="index.html">Inicio</a>
+            <a href="menu.html">Inicio</a>
         </nav>
         
         
