--- a/pagdogs.html
+++ b/pagdogs.html
@@ -21,7 +21,7 @@
                 <img src="#" alt="Principal" onclick="trocarDog()" id="dogs">
             </picture> 
         <nav>
-            <a href="index.html">Inicio</a>
+            <a href="menu.html">Inicio</a>
         </nav>
         
         
