--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="imagens/Google-Noto-Emoji-Animals-Nature-22264-paw-prints.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="Google-Noto-Emoji-Animals-Nature-22264-paw-prints.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilospag.css">
     <script src="jsimgs"></script>
     <title>Pet Photograph</title>
@@ -55,10 +55,8 @@
     </main>
 
     <footer>
-
-
+        Site criado por <a href="https://github.com/devlorival" target="_blank" rel="external">Felipe Moura</a>
     </footer>
-
 
 </body>
 </html>
