--- a/paggatos.html
+++ b/paggatos.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="imagens/Google-Noto-Emoji-Animals-Nature-22264-paw-prints.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="Paomedia-Small-N-Flat-Cat.ico" type="image/x-icon">
     <link rel="stylesheet" href="catpag.css">
     <script src="jsimgs"></script>
-    <title>Pet Photograph</title>
+    <title>Gatinhos</title>
 </head>
 <body>
    
@@ -32,10 +32,6 @@
         
     </main>
 
-    <footer>
-
-
-    </footer>
 
 
 </body>
